# local-motion-transfer

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: model_runner.py  preprocessing.py  queue.py  watermark.py
backend/: main.py
frontend/: index.html
scripts/: check_env.py
ui/: gradio_app.py
