[project]
name = "local-motion-transfer"
version = "0.1.0"
description = "Privacy-first, local-first motion-transfer app wired to MimicMotion"
readme = "README.md"
# torch 2.0.1 / cu117 only ships cp38–cp311 wheels, and MimicMotion targets 3.11.
requires-python = "==3.11.*"

dependencies = [
    # --- this app: web / media (the UI is a static page served by FastAPI) ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",     # FastAPI file uploads
    "opencv-python>=4.9",
    "pillow>=10.0",
    "imageio-ffmpeg>=0.4.9",       # bundles an ffmpeg binary (audio mux / metadata)

    # numpy MUST stay <2: torch 2.0.1, decord 0.6, transformers 4.32 predate the
    # numpy-2 ABI and will crash against it.
    "numpy>=1.24,<2",

    # --- MimicMotion runtime (mirrors its environment.yaml) ---
    "torch==2.0.1",
    "torchvision==0.15.2",
    "diffusers==0.27.0",           # MimicMotion uses APIs specific to this version
    "transformers==4.32.1",
    # diffusers 0.27 imports huggingface_hub.cached_download, which was REMOVED in
    # hub 0.26. Pin below 0.26 so that import works (also fine for transformers
    # 4.32). Resolves to ~0.25.2.
    "huggingface-hub>=0.20.2,<0.26",
    "decord==0.6.0",
    "einops",
    "omegaconf",
    "matplotlib",                  # MimicMotion's DWPose util imports it (pose drawing)
    # diffusers' from_pretrained defaults to low_cpu_mem_usage=True, which needs
    # accelerate. Cap <0.30 to stay in the diffusers-0.27 era and avoid pulling
    # huggingface-hub >=0.26 (see the hub pin above).
    "accelerate>=0.26,<0.30",

    # --- DWPose (MimicMotion's pose estimator) ---
    # CPU build on purpose. onnxruntime-gpu wheels are hard-pinned to a CUDA major
    # version (the current PyPI default links CUDA 12/13), which won't match this
    # CUDA 11.7 torch stack and fails at import with a missing libcudart.so. DWPose
    # is not the bottleneck (the SVD diffusion is), so we run pose estimation on CPU
    # and let the diffusion use the GPU via torch. MimicMotion requests the CUDA
    # provider; onnxruntime cleanly falls back to CPU with a warning.
    # For GPU pose (optional, faster): use a CUDA-11 build, e.g. onnxruntime-gpu
    # ==1.16.3, and make CUDA 11 runtime libs visible to onnxruntime.
    "onnxruntime",
]

# This is an application, not a library: have uv manage the env and install the
# dependencies, but not build/install the project itself as a wheel.
[tool.uv]
package = false

# Pull torch + torchvision from PyTorch's CUDA 11.7 wheel index (matching
# MimicMotion's pin). `explicit = true` means ONLY the packages routed here via
# [tool.uv.sources] use this index; everything else comes from PyPI.
[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
